test/fails/bad_parsing/constants5.lgl
void main() {
    print [1., 2...];
}
